# autopatch

./: .env.example  .gitignore  Makefile  README.md  docker-compose.greenbone.yml  docker-compose.yml  pyproject.toml
ansible/: ansible.cfg
dashboard/: package.json
deploy/docker/: Dockerfile.api  Dockerfile.dashboard
migrations/: env.py
migrations/versions/: 153b8202e128_initial_schema.py  3a96258d090b_add_scan_reports_table_and_report_id_fks.py  428abbd049ac_add_tier_column_to_assets.py  547acffb1125_add_scanner_task_id_config_to_scans_ssh_.py  8584fe512a40_add_users_table.py  ad0dfc81c788_fix_asset_fk_cascade.py  b1c2d3e4f5a6_add_progress_to_scans.py  e106a8a6cb64_add_unique_constraint_on_asset_id_cve_id.py
scripts/: import_cve_feed.py  import_epss.py  import_kev.py  seed_db.py
src/agents/: docs_agent.py  evaluator_agent.py  executor_agent.py  graph.py  lead_agent.py  llm.py  llm_client.py  research_agent.py  state.py  verification_agent.py
src/api/: config.py  dependencies.py  main.py
src/shared/: database.py  exceptions.py  logging.py  metrics.py  minio_client.py  notification.py  redis_client.py
src/workers/: celery_app.py  clone_tasks.py  enrichment_tasks.py  notification_tasks.py  remediation_tasks.py  scan_tasks.py
terraform/: .gitignore
tests/: conftest.py
tests/e2e/: conftest.py  test_live_llm.py  test_live_terraform.py  test_metasploitable2.py
tests/fixtures/: epss_sample.csv  kev_sample.json  nuclei_output.jsonl  nvd_sample.json  openvas_results.xml  trivy_output.json
tests/integration/: test_asset_endpoints.py  test_assets_api.py  (+7 more)
(+182 files in other folders)
